// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index.js creates chrome corejs minified polyfills 1`] = `
Array [
  "intersection-observer",
]
`;

exports[`index.js creates chrome corejs unminified polyfills 1`] = `
Array [
  "intersection-observer",
]
`;

exports[`index.js creates ie11 corejs minified polyflls 1`] = `
Array [
  "core-js/modules/es.symbol",
  "core-js/modules/es.symbol.description",
  "core-js/modules/es.symbol.async-iterator",
  "core-js/modules/es.symbol.has-instance",
  "core-js/modules/es.symbol.is-concat-spreadable",
  "core-js/modules/es.symbol.iterator",
  "core-js/modules/es.symbol.match",
  "core-js/modules/es.symbol.match-all",
  "core-js/modules/es.symbol.replace",
  "core-js/modules/es.symbol.search",
  "core-js/modules/es.symbol.species",
  "core-js/modules/es.symbol.split",
  "core-js/modules/es.symbol.to-primitive",
  "core-js/modules/es.symbol.to-string-tag",
  "core-js/modules/es.symbol.unscopables",
  "core-js/modules/es.array.concat",
  "core-js/modules/es.array.copy-within",
  "core-js/modules/es.array.fill",
  "core-js/modules/es.array.filter",
  "core-js/modules/es.array.find",
  "core-js/modules/es.array.find-index",
  "core-js/modules/es.array.flat",
  "core-js/modules/es.array.flat-map",
  "core-js/modules/es.array.from",
  "core-js/modules/es.array.includes",
  "core-js/modules/es.array.iterator",
  "core-js/modules/es.array.join",
  "core-js/modules/es.array.map",
  "core-js/modules/es.array.of",
  "core-js/modules/es.array.slice",
  "core-js/modules/es.array.species",
  "core-js/modules/es.array.splice",
  "core-js/modules/es.array.unscopables.flat",
  "core-js/modules/es.array.unscopables.flat-map",
  "core-js/modules/es.date.to-primitive",
  "core-js/modules/es.function.has-instance",
  "core-js/modules/es.function.name",
  "core-js/modules/es.json.to-string-tag",
  "core-js/modules/es.map",
  "core-js/modules/es.number.constructor",
  "core-js/modules/es.number.epsilon",
  "core-js/modules/es.number.is-finite",
  "core-js/modules/es.number.is-integer",
  "core-js/modules/es.number.is-nan",
  "core-js/modules/es.number.is-safe-integer",
  "core-js/modules/es.number.max-safe-integer",
  "core-js/modules/es.number.min-safe-integer",
  "core-js/modules/es.number.parse-float",
  "core-js/modules/es.number.parse-int",
  "core-js/modules/es.number.to-fixed",
  "core-js/modules/es.object.assign",
  "core-js/modules/es.object.define-getter",
  "core-js/modules/es.object.define-setter",
  "core-js/modules/es.object.entries",
  "core-js/modules/es.object.freeze",
  "core-js/modules/es.object.from-entries",
  "core-js/modules/es.object.get-own-property-descriptor",
  "core-js/modules/es.object.get-own-property-descriptors",
  "core-js/modules/es.object.get-own-property-names",
  "core-js/modules/es.object.get-prototype-of",
  "core-js/modules/es.object.is",
  "core-js/modules/es.object.is-extensible",
  "core-js/modules/es.object.is-frozen",
  "core-js/modules/es.object.is-sealed",
  "core-js/modules/es.object.keys",
  "core-js/modules/es.object.lookup-getter",
  "core-js/modules/es.object.lookup-setter",
  "core-js/modules/es.object.prevent-extensions",
  "core-js/modules/es.object.seal",
  "core-js/modules/es.object.to-string",
  "core-js/modules/es.object.values",
  "core-js/modules/es.promise",
  "core-js/modules/es.promise.all-settled",
  "core-js/modules/es.promise.finally",
  "core-js/modules/es.regexp.constructor",
  "core-js/modules/es.regexp.flags",
  "core-js/modules/es.regexp.to-string",
  "core-js/modules/es.set",
  "core-js/modules/es.string.code-point-at",
  "core-js/modules/es.string.ends-with",
  "core-js/modules/es.string.from-code-point",
  "core-js/modules/es.string.includes",
  "core-js/modules/es.string.iterator",
  "core-js/modules/es.string.match",
  "core-js/modules/es.string.match-all",
  "core-js/modules/es.string.pad-end",
  "core-js/modules/es.string.pad-start",
  "core-js/modules/es.string.repeat",
  "core-js/modules/es.string.replace",
  "core-js/modules/es.string.search",
  "core-js/modules/es.string.split",
  "core-js/modules/es.string.starts-with",
  "core-js/modules/es.string.trim",
  "core-js/modules/es.string.trim-end",
  "core-js/modules/es.string.trim-start",
  "core-js/modules/web.dom-collections.for-each",
  "core-js/modules/web.dom-collections.iterator",
  "core-js/modules/web.queue-microtask",
  "core-js/modules/web.url-search-params",
  "whatwg-fetch",
  "intersection-observer",
]
`;

exports[`index.js creates ie11 corejs minified polyflls 2`] = `84001`;

exports[`index.js handles UA not defined in browserlist 1`] = `undefined`;

exports[`index.js handles various UA strings 1`] = `
Array [
  "core-js/modules/es.symbol",
  "core-js/modules/es.symbol.description",
  "core-js/modules/es.symbol.async-iterator",
  "core-js/modules/es.symbol.has-instance",
  "core-js/modules/es.symbol.is-concat-spreadable",
  "core-js/modules/es.symbol.iterator",
  "core-js/modules/es.symbol.match",
  "core-js/modules/es.symbol.match-all",
  "core-js/modules/es.symbol.replace",
  "core-js/modules/es.symbol.search",
  "core-js/modules/es.symbol.species",
  "core-js/modules/es.symbol.split",
  "core-js/modules/es.symbol.to-primitive",
  "core-js/modules/es.symbol.to-string-tag",
  "core-js/modules/es.symbol.unscopables",
  "core-js/modules/es.array.concat",
  "core-js/modules/es.array.copy-within",
  "core-js/modules/es.array.every",
  "core-js/modules/es.array.fill",
  "core-js/modules/es.array.filter",
  "core-js/modules/es.array.find",
  "core-js/modules/es.array.find-index",
  "core-js/modules/es.array.flat",
  "core-js/modules/es.array.flat-map",
  "core-js/modules/es.array.for-each",
  "core-js/modules/es.array.from",
  "core-js/modules/es.array.includes",
  "core-js/modules/es.array.index-of",
  "core-js/modules/es.array.iterator",
  "core-js/modules/es.array.join",
  "core-js/modules/es.array.last-index-of",
  "core-js/modules/es.array.map",
  "core-js/modules/es.array.of",
  "core-js/modules/es.array.reduce",
  "core-js/modules/es.array.reduce-right",
  "core-js/modules/es.array.reverse",
  "core-js/modules/es.array.slice",
  "core-js/modules/es.array.some",
  "core-js/modules/es.array.sort",
  "core-js/modules/es.array.species",
  "core-js/modules/es.array.splice",
  "core-js/modules/es.array.unscopables.flat",
  "core-js/modules/es.array.unscopables.flat-map",
  "core-js/modules/es.date.to-iso-string",
  "core-js/modules/es.date.to-json",
  "core-js/modules/es.date.to-primitive",
  "core-js/modules/es.date.to-string",
  "core-js/modules/es.function.has-instance",
  "core-js/modules/es.function.name",
  "core-js/modules/es.json.to-string-tag",
  "core-js/modules/es.map",
  "core-js/modules/es.number.constructor",
  "core-js/modules/es.number.epsilon",
  "core-js/modules/es.number.is-finite",
  "core-js/modules/es.number.is-integer",
  "core-js/modules/es.number.is-nan",
  "core-js/modules/es.number.is-safe-integer",
  "core-js/modules/es.number.max-safe-integer",
  "core-js/modules/es.number.min-safe-integer",
  "core-js/modules/es.number.parse-float",
  "core-js/modules/es.number.parse-int",
  "core-js/modules/es.number.to-fixed",
  "core-js/modules/es.number.to-precision",
  "core-js/modules/es.object.assign",
  "core-js/modules/es.object.define-getter",
  "core-js/modules/es.object.define-properties",
  "core-js/modules/es.object.define-property",
  "core-js/modules/es.object.define-setter",
  "core-js/modules/es.object.entries",
  "core-js/modules/es.object.freeze",
  "core-js/modules/es.object.from-entries",
  "core-js/modules/es.object.get-own-property-descriptor",
  "core-js/modules/es.object.get-own-property-descriptors",
  "core-js/modules/es.object.get-own-property-names",
  "core-js/modules/es.object.get-prototype-of",
  "core-js/modules/es.object.is",
  "core-js/modules/es.object.is-extensible",
  "core-js/modules/es.object.is-frozen",
  "core-js/modules/es.object.is-sealed",
  "core-js/modules/es.object.keys",
  "core-js/modules/es.object.lookup-getter",
  "core-js/modules/es.object.lookup-setter",
  "core-js/modules/es.object.prevent-extensions",
  "core-js/modules/es.object.seal",
  "core-js/modules/es.object.set-prototype-of",
  "core-js/modules/es.object.to-string",
  "core-js/modules/es.object.values",
  "core-js/modules/es.promise",
  "core-js/modules/es.promise.all-settled",
  "core-js/modules/es.promise.finally",
  "core-js/modules/es.regexp.constructor",
  "core-js/modules/es.regexp.exec",
  "core-js/modules/es.regexp.flags",
  "core-js/modules/es.regexp.to-string",
  "core-js/modules/es.set",
  "core-js/modules/es.string.code-point-at",
  "core-js/modules/es.string.ends-with",
  "core-js/modules/es.string.from-code-point",
  "core-js/modules/es.string.includes",
  "core-js/modules/es.string.iterator",
  "core-js/modules/es.string.match",
  "core-js/modules/es.string.match-all",
  "core-js/modules/es.string.pad-end",
  "core-js/modules/es.string.pad-start",
  "core-js/modules/es.string.repeat",
  "core-js/modules/es.string.replace",
  "core-js/modules/es.string.search",
  "core-js/modules/es.string.split",
  "core-js/modules/es.string.starts-with",
  "core-js/modules/es.string.trim",
  "core-js/modules/es.string.trim-end",
  "core-js/modules/es.string.trim-start",
  "core-js/modules/web.dom-collections.for-each",
  "core-js/modules/web.dom-collections.iterator",
  "core-js/modules/web.queue-microtask",
  "core-js/modules/web.url-search-params",
  "whatwg-fetch",
  "intersection-observer",
]
`;

exports[`index.js handles various UA strings 2`] = `
Array [
  "core-js/modules/es.symbol",
  "core-js/modules/es.symbol.description",
  "core-js/modules/es.symbol.async-iterator",
  "core-js/modules/es.symbol.has-instance",
  "core-js/modules/es.symbol.is-concat-spreadable",
  "core-js/modules/es.symbol.iterator",
  "core-js/modules/es.symbol.match",
  "core-js/modules/es.symbol.match-all",
  "core-js/modules/es.symbol.replace",
  "core-js/modules/es.symbol.search",
  "core-js/modules/es.symbol.species",
  "core-js/modules/es.symbol.split",
  "core-js/modules/es.symbol.to-primitive",
  "core-js/modules/es.symbol.to-string-tag",
  "core-js/modules/es.symbol.unscopables",
  "core-js/modules/es.array.concat",
  "core-js/modules/es.array.copy-within",
  "core-js/modules/es.array.every",
  "core-js/modules/es.array.fill",
  "core-js/modules/es.array.filter",
  "core-js/modules/es.array.find",
  "core-js/modules/es.array.find-index",
  "core-js/modules/es.array.flat",
  "core-js/modules/es.array.flat-map",
  "core-js/modules/es.array.for-each",
  "core-js/modules/es.array.from",
  "core-js/modules/es.array.includes",
  "core-js/modules/es.array.index-of",
  "core-js/modules/es.array.iterator",
  "core-js/modules/es.array.join",
  "core-js/modules/es.array.last-index-of",
  "core-js/modules/es.array.map",
  "core-js/modules/es.array.of",
  "core-js/modules/es.array.reduce",
  "core-js/modules/es.array.reduce-right",
  "core-js/modules/es.array.reverse",
  "core-js/modules/es.array.slice",
  "core-js/modules/es.array.some",
  "core-js/modules/es.array.sort",
  "core-js/modules/es.array.species",
  "core-js/modules/es.array.splice",
  "core-js/modules/es.array.unscopables.flat",
  "core-js/modules/es.array.unscopables.flat-map",
  "core-js/modules/es.date.to-iso-string",
  "core-js/modules/es.date.to-json",
  "core-js/modules/es.date.to-primitive",
  "core-js/modules/es.date.to-string",
  "core-js/modules/es.function.has-instance",
  "core-js/modules/es.function.name",
  "core-js/modules/es.json.to-string-tag",
  "core-js/modules/es.map",
  "core-js/modules/es.number.constructor",
  "core-js/modules/es.number.epsilon",
  "core-js/modules/es.number.is-finite",
  "core-js/modules/es.number.is-integer",
  "core-js/modules/es.number.is-nan",
  "core-js/modules/es.number.is-safe-integer",
  "core-js/modules/es.number.max-safe-integer",
  "core-js/modules/es.number.min-safe-integer",
  "core-js/modules/es.number.parse-float",
  "core-js/modules/es.number.parse-int",
  "core-js/modules/es.number.to-fixed",
  "core-js/modules/es.number.to-precision",
  "core-js/modules/es.object.assign",
  "core-js/modules/es.object.define-getter",
  "core-js/modules/es.object.define-properties",
  "core-js/modules/es.object.define-property",
  "core-js/modules/es.object.define-setter",
  "core-js/modules/es.object.entries",
  "core-js/modules/es.object.freeze",
  "core-js/modules/es.object.from-entries",
  "core-js/modules/es.object.get-own-property-descriptor",
  "core-js/modules/es.object.get-own-property-descriptors",
  "core-js/modules/es.object.get-own-property-names",
  "core-js/modules/es.object.get-prototype-of",
  "core-js/modules/es.object.is",
  "core-js/modules/es.object.is-extensible",
  "core-js/modules/es.object.is-frozen",
  "core-js/modules/es.object.is-sealed",
  "core-js/modules/es.object.keys",
  "core-js/modules/es.object.lookup-getter",
  "core-js/modules/es.object.lookup-setter",
  "core-js/modules/es.object.prevent-extensions",
  "core-js/modules/es.object.seal",
  "core-js/modules/es.object.set-prototype-of",
  "core-js/modules/es.object.to-string",
  "core-js/modules/es.object.values",
  "core-js/modules/es.promise",
  "core-js/modules/es.promise.all-settled",
  "core-js/modules/es.promise.finally",
  "core-js/modules/es.regexp.constructor",
  "core-js/modules/es.regexp.exec",
  "core-js/modules/es.regexp.flags",
  "core-js/modules/es.regexp.to-string",
  "core-js/modules/es.set",
  "core-js/modules/es.string.code-point-at",
  "core-js/modules/es.string.ends-with",
  "core-js/modules/es.string.from-code-point",
  "core-js/modules/es.string.includes",
  "core-js/modules/es.string.iterator",
  "core-js/modules/es.string.match",
  "core-js/modules/es.string.match-all",
  "core-js/modules/es.string.pad-end",
  "core-js/modules/es.string.pad-start",
  "core-js/modules/es.string.repeat",
  "core-js/modules/es.string.replace",
  "core-js/modules/es.string.search",
  "core-js/modules/es.string.split",
  "core-js/modules/es.string.starts-with",
  "core-js/modules/es.string.trim",
  "core-js/modules/es.string.trim-end",
  "core-js/modules/es.string.trim-start",
  "core-js/modules/web.dom-collections.for-each",
  "core-js/modules/web.dom-collections.iterator",
  "core-js/modules/web.queue-microtask",
  "core-js/modules/web.url-search-params",
  "whatwg-fetch",
  "intersection-observer",
]
`;

exports[`index.js handles various UA strings 3`] = `
Array [
  "core-js/modules/es.symbol.description",
  "core-js/modules/es.symbol.async-iterator",
  "core-js/modules/es.symbol.match-all",
  "core-js/modules/es.array.flat",
  "core-js/modules/es.array.flat-map",
  "core-js/modules/es.array.reverse",
  "core-js/modules/es.array.sort",
  "core-js/modules/es.array.unscopables.flat",
  "core-js/modules/es.array.unscopables.flat-map",
  "core-js/modules/es.number.parse-float",
  "core-js/modules/es.object.entries",
  "core-js/modules/es.object.from-entries",
  "core-js/modules/es.object.values",
  "core-js/modules/es.promise",
  "core-js/modules/es.promise.all-settled",
  "core-js/modules/es.promise.finally",
  "core-js/modules/es.string.match-all",
  "core-js/modules/es.string.pad-end",
  "core-js/modules/es.string.pad-start",
  "core-js/modules/es.string.replace",
  "core-js/modules/es.string.trim",
  "core-js/modules/es.string.trim-end",
  "core-js/modules/es.string.trim-start",
  "core-js/modules/web.dom-collections.iterator",
  "core-js/modules/web.queue-microtask",
  "core-js/modules/web.url-search-params",
  "whatwg-fetch",
  "intersection-observer",
]
`;

exports[`index.js handles various UA strings 4`] = `
Array [
  "core-js/modules/es.symbol",
  "core-js/modules/es.symbol.description",
  "core-js/modules/es.symbol.async-iterator",
  "core-js/modules/es.symbol.has-instance",
  "core-js/modules/es.symbol.is-concat-spreadable",
  "core-js/modules/es.symbol.iterator",
  "core-js/modules/es.symbol.match",
  "core-js/modules/es.symbol.match-all",
  "core-js/modules/es.symbol.replace",
  "core-js/modules/es.symbol.search",
  "core-js/modules/es.symbol.species",
  "core-js/modules/es.symbol.split",
  "core-js/modules/es.symbol.to-primitive",
  "core-js/modules/es.symbol.to-string-tag",
  "core-js/modules/es.symbol.unscopables",
  "core-js/modules/es.array.concat",
  "core-js/modules/es.array.copy-within",
  "core-js/modules/es.array.every",
  "core-js/modules/es.array.fill",
  "core-js/modules/es.array.filter",
  "core-js/modules/es.array.find",
  "core-js/modules/es.array.find-index",
  "core-js/modules/es.array.flat",
  "core-js/modules/es.array.flat-map",
  "core-js/modules/es.array.for-each",
  "core-js/modules/es.array.from",
  "core-js/modules/es.array.includes",
  "core-js/modules/es.array.index-of",
  "core-js/modules/es.array.iterator",
  "core-js/modules/es.array.join",
  "core-js/modules/es.array.last-index-of",
  "core-js/modules/es.array.map",
  "core-js/modules/es.array.of",
  "core-js/modules/es.array.reduce",
  "core-js/modules/es.array.reduce-right",
  "core-js/modules/es.array.reverse",
  "core-js/modules/es.array.slice",
  "core-js/modules/es.array.some",
  "core-js/modules/es.array.sort",
  "core-js/modules/es.array.species",
  "core-js/modules/es.array.splice",
  "core-js/modules/es.array.unscopables.flat",
  "core-js/modules/es.array.unscopables.flat-map",
  "core-js/modules/es.date.to-iso-string",
  "core-js/modules/es.date.to-json",
  "core-js/modules/es.date.to-primitive",
  "core-js/modules/es.date.to-string",
  "core-js/modules/es.function.has-instance",
  "core-js/modules/es.function.name",
  "core-js/modules/es.json.to-string-tag",
  "core-js/modules/es.map",
  "core-js/modules/es.number.constructor",
  "core-js/modules/es.number.epsilon",
  "core-js/modules/es.number.is-finite",
  "core-js/modules/es.number.is-integer",
  "core-js/modules/es.number.is-nan",
  "core-js/modules/es.number.is-safe-integer",
  "core-js/modules/es.number.max-safe-integer",
  "core-js/modules/es.number.min-safe-integer",
  "core-js/modules/es.number.parse-float",
  "core-js/modules/es.number.parse-int",
  "core-js/modules/es.number.to-fixed",
  "core-js/modules/es.number.to-precision",
  "core-js/modules/es.object.assign",
  "core-js/modules/es.object.define-getter",
  "core-js/modules/es.object.define-properties",
  "core-js/modules/es.object.define-property",
  "core-js/modules/es.object.define-setter",
  "core-js/modules/es.object.entries",
  "core-js/modules/es.object.freeze",
  "core-js/modules/es.object.from-entries",
  "core-js/modules/es.object.get-own-property-descriptor",
  "core-js/modules/es.object.get-own-property-descriptors",
  "core-js/modules/es.object.get-own-property-names",
  "core-js/modules/es.object.get-prototype-of",
  "core-js/modules/es.object.is",
  "core-js/modules/es.object.is-extensible",
  "core-js/modules/es.object.is-frozen",
  "core-js/modules/es.object.is-sealed",
  "core-js/modules/es.object.keys",
  "core-js/modules/es.object.lookup-getter",
  "core-js/modules/es.object.lookup-setter",
  "core-js/modules/es.object.prevent-extensions",
  "core-js/modules/es.object.seal",
  "core-js/modules/es.object.set-prototype-of",
  "core-js/modules/es.object.to-string",
  "core-js/modules/es.object.values",
  "core-js/modules/es.promise",
  "core-js/modules/es.promise.all-settled",
  "core-js/modules/es.promise.finally",
  "core-js/modules/es.regexp.constructor",
  "core-js/modules/es.regexp.exec",
  "core-js/modules/es.regexp.flags",
  "core-js/modules/es.regexp.to-string",
  "core-js/modules/es.set",
  "core-js/modules/es.string.code-point-at",
  "core-js/modules/es.string.ends-with",
  "core-js/modules/es.string.from-code-point",
  "core-js/modules/es.string.includes",
  "core-js/modules/es.string.iterator",
  "core-js/modules/es.string.match",
  "core-js/modules/es.string.match-all",
  "core-js/modules/es.string.pad-end",
  "core-js/modules/es.string.pad-start",
  "core-js/modules/es.string.repeat",
  "core-js/modules/es.string.replace",
  "core-js/modules/es.string.search",
  "core-js/modules/es.string.split",
  "core-js/modules/es.string.starts-with",
  "core-js/modules/es.string.trim",
  "core-js/modules/es.string.trim-end",
  "core-js/modules/es.string.trim-start",
  "core-js/modules/web.dom-collections.for-each",
  "core-js/modules/web.dom-collections.iterator",
  "core-js/modules/web.queue-microtask",
  "core-js/modules/web.url-search-params",
  "whatwg-fetch",
  "intersection-observer",
]
`;

exports[`index.js handles various UA strings 5`] = `
Array [
  "core-js/modules/es.symbol",
  "core-js/modules/es.symbol.description",
  "core-js/modules/es.symbol.async-iterator",
  "core-js/modules/es.symbol.has-instance",
  "core-js/modules/es.symbol.is-concat-spreadable",
  "core-js/modules/es.symbol.iterator",
  "core-js/modules/es.symbol.match",
  "core-js/modules/es.symbol.match-all",
  "core-js/modules/es.symbol.replace",
  "core-js/modules/es.symbol.search",
  "core-js/modules/es.symbol.species",
  "core-js/modules/es.symbol.split",
  "core-js/modules/es.symbol.to-primitive",
  "core-js/modules/es.symbol.to-string-tag",
  "core-js/modules/es.symbol.unscopables",
  "core-js/modules/es.array.concat",
  "core-js/modules/es.array.copy-within",
  "core-js/modules/es.array.every",
  "core-js/modules/es.array.fill",
  "core-js/modules/es.array.filter",
  "core-js/modules/es.array.find",
  "core-js/modules/es.array.find-index",
  "core-js/modules/es.array.flat",
  "core-js/modules/es.array.flat-map",
  "core-js/modules/es.array.for-each",
  "core-js/modules/es.array.from",
  "core-js/modules/es.array.includes",
  "core-js/modules/es.array.index-of",
  "core-js/modules/es.array.iterator",
  "core-js/modules/es.array.join",
  "core-js/modules/es.array.last-index-of",
  "core-js/modules/es.array.map",
  "core-js/modules/es.array.of",
  "core-js/modules/es.array.reduce",
  "core-js/modules/es.array.reduce-right",
  "core-js/modules/es.array.reverse",
  "core-js/modules/es.array.slice",
  "core-js/modules/es.array.some",
  "core-js/modules/es.array.sort",
  "core-js/modules/es.array.species",
  "core-js/modules/es.array.splice",
  "core-js/modules/es.array.unscopables.flat",
  "core-js/modules/es.array.unscopables.flat-map",
  "core-js/modules/es.date.to-iso-string",
  "core-js/modules/es.date.to-json",
  "core-js/modules/es.date.to-primitive",
  "core-js/modules/es.date.to-string",
  "core-js/modules/es.function.has-instance",
  "core-js/modules/es.function.name",
  "core-js/modules/es.json.to-string-tag",
  "core-js/modules/es.map",
  "core-js/modules/es.number.constructor",
  "core-js/modules/es.number.epsilon",
  "core-js/modules/es.number.is-finite",
  "core-js/modules/es.number.is-integer",
  "core-js/modules/es.number.is-nan",
  "core-js/modules/es.number.is-safe-integer",
  "core-js/modules/es.number.max-safe-integer",
  "core-js/modules/es.number.min-safe-integer",
  "core-js/modules/es.number.parse-float",
  "core-js/modules/es.number.parse-int",
  "core-js/modules/es.number.to-fixed",
  "core-js/modules/es.number.to-precision",
  "core-js/modules/es.object.assign",
  "core-js/modules/es.object.define-getter",
  "core-js/modules/es.object.define-properties",
  "core-js/modules/es.object.define-property",
  "core-js/modules/es.object.define-setter",
  "core-js/modules/es.object.entries",
  "core-js/modules/es.object.freeze",
  "core-js/modules/es.object.from-entries",
  "core-js/modules/es.object.get-own-property-descriptor",
  "core-js/modules/es.object.get-own-property-descriptors",
  "core-js/modules/es.object.get-own-property-names",
  "core-js/modules/es.object.get-prototype-of",
  "core-js/modules/es.object.is",
  "core-js/modules/es.object.is-extensible",
  "core-js/modules/es.object.is-frozen",
  "core-js/modules/es.object.is-sealed",
  "core-js/modules/es.object.keys",
  "core-js/modules/es.object.lookup-getter",
  "core-js/modules/es.object.lookup-setter",
  "core-js/modules/es.object.prevent-extensions",
  "core-js/modules/es.object.seal",
  "core-js/modules/es.object.set-prototype-of",
  "core-js/modules/es.object.to-string",
  "core-js/modules/es.object.values",
  "core-js/modules/es.promise",
  "core-js/modules/es.promise.all-settled",
  "core-js/modules/es.promise.finally",
  "core-js/modules/es.regexp.constructor",
  "core-js/modules/es.regexp.exec",
  "core-js/modules/es.regexp.flags",
  "core-js/modules/es.regexp.to-string",
  "core-js/modules/es.set",
  "core-js/modules/es.string.code-point-at",
  "core-js/modules/es.string.ends-with",
  "core-js/modules/es.string.from-code-point",
  "core-js/modules/es.string.includes",
  "core-js/modules/es.string.iterator",
  "core-js/modules/es.string.match",
  "core-js/modules/es.string.match-all",
  "core-js/modules/es.string.pad-end",
  "core-js/modules/es.string.pad-start",
  "core-js/modules/es.string.repeat",
  "core-js/modules/es.string.replace",
  "core-js/modules/es.string.search",
  "core-js/modules/es.string.split",
  "core-js/modules/es.string.starts-with",
  "core-js/modules/es.string.trim",
  "core-js/modules/es.string.trim-end",
  "core-js/modules/es.string.trim-start",
  "core-js/modules/web.dom-collections.for-each",
  "core-js/modules/web.dom-collections.iterator",
  "core-js/modules/web.queue-microtask",
  "core-js/modules/web.url-search-params",
  "whatwg-fetch",
  "intersection-observer",
]
`;

exports[`index.js handles various UA strings 6`] = `
Array [
  "core-js/modules/es.symbol",
  "core-js/modules/es.symbol.description",
  "core-js/modules/es.symbol.async-iterator",
  "core-js/modules/es.symbol.has-instance",
  "core-js/modules/es.symbol.is-concat-spreadable",
  "core-js/modules/es.symbol.iterator",
  "core-js/modules/es.symbol.match",
  "core-js/modules/es.symbol.match-all",
  "core-js/modules/es.symbol.replace",
  "core-js/modules/es.symbol.search",
  "core-js/modules/es.symbol.species",
  "core-js/modules/es.symbol.split",
  "core-js/modules/es.symbol.to-primitive",
  "core-js/modules/es.symbol.to-string-tag",
  "core-js/modules/es.symbol.unscopables",
  "core-js/modules/es.array.concat",
  "core-js/modules/es.array.copy-within",
  "core-js/modules/es.array.fill",
  "core-js/modules/es.array.filter",
  "core-js/modules/es.array.find",
  "core-js/modules/es.array.find-index",
  "core-js/modules/es.array.flat",
  "core-js/modules/es.array.flat-map",
  "core-js/modules/es.array.from",
  "core-js/modules/es.array.includes",
  "core-js/modules/es.array.iterator",
  "core-js/modules/es.array.join",
  "core-js/modules/es.array.map",
  "core-js/modules/es.array.of",
  "core-js/modules/es.array.slice",
  "core-js/modules/es.array.species",
  "core-js/modules/es.array.splice",
  "core-js/modules/es.array.unscopables.flat",
  "core-js/modules/es.array.unscopables.flat-map",
  "core-js/modules/es.date.to-primitive",
  "core-js/modules/es.function.has-instance",
  "core-js/modules/es.function.name",
  "core-js/modules/es.json.to-string-tag",
  "core-js/modules/es.map",
  "core-js/modules/es.number.constructor",
  "core-js/modules/es.number.parse-float",
  "core-js/modules/es.number.parse-int",
  "core-js/modules/es.number.to-fixed",
  "core-js/modules/es.object.assign",
  "core-js/modules/es.object.define-getter",
  "core-js/modules/es.object.define-setter",
  "core-js/modules/es.object.entries",
  "core-js/modules/es.object.freeze",
  "core-js/modules/es.object.from-entries",
  "core-js/modules/es.object.get-own-property-descriptor",
  "core-js/modules/es.object.get-own-property-descriptors",
  "core-js/modules/es.object.get-own-property-names",
  "core-js/modules/es.object.get-prototype-of",
  "core-js/modules/es.object.is-extensible",
  "core-js/modules/es.object.is-frozen",
  "core-js/modules/es.object.is-sealed",
  "core-js/modules/es.object.keys",
  "core-js/modules/es.object.lookup-getter",
  "core-js/modules/es.object.lookup-setter",
  "core-js/modules/es.object.prevent-extensions",
  "core-js/modules/es.object.seal",
  "core-js/modules/es.object.to-string",
  "core-js/modules/es.object.values",
  "core-js/modules/es.promise",
  "core-js/modules/es.promise.all-settled",
  "core-js/modules/es.promise.finally",
  "core-js/modules/es.regexp.constructor",
  "core-js/modules/es.regexp.flags",
  "core-js/modules/es.regexp.to-string",
  "core-js/modules/es.set",
  "core-js/modules/es.string.code-point-at",
  "core-js/modules/es.string.ends-with",
  "core-js/modules/es.string.from-code-point",
  "core-js/modules/es.string.includes",
  "core-js/modules/es.string.iterator",
  "core-js/modules/es.string.match",
  "core-js/modules/es.string.match-all",
  "core-js/modules/es.string.pad-end",
  "core-js/modules/es.string.pad-start",
  "core-js/modules/es.string.repeat",
  "core-js/modules/es.string.replace",
  "core-js/modules/es.string.search",
  "core-js/modules/es.string.split",
  "core-js/modules/es.string.starts-with",
  "core-js/modules/es.string.trim",
  "core-js/modules/es.string.trim-end",
  "core-js/modules/es.string.trim-start",
  "core-js/modules/web.dom-collections.for-each",
  "core-js/modules/web.dom-collections.iterator",
  "core-js/modules/web.queue-microtask",
  "core-js/modules/web.url-search-params",
  "whatwg-fetch",
  "intersection-observer",
]
`;
